# qtcast

./: CHANGELOG.md  README.md  install.sh  launch-qtcast.sh  pyproject.toml
qtcast/: __init__.py  __main__.py  devices.py  ffmpeg.py  main.py  screensaver.py  subtitles.py  transcoder.py  utils.py  webserver.py
tests/: test-detection.py  test-device-info.py
