[project]
name = "qtcast"
version = "2.0.0"
description = "A PyQt6 GUI for Chromecasting local media files (port of Gnomecast)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "QtCast Port", email = "qtcast@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.0.0",
    "bottle~=0.13.3",
    "paste~=3.10.1",
    "pycaption~=2.2.16",
    "pychromecast~=13.1.0",
]

[project.gui-scripts]
qtcast = "qtcast:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
